# scuq

./: .cvsignore  .hgignore  .project  .readthedocs.yaml  AUTHORS  MANIFEST.in  Makefile  doc.cfg  ez_setup.py  setup.cfg  setup.py  version.py
Examples/: AlternateUnits.py  ProductUnits.py  TransformedUnits.py  UncertainQuantity.py  Units.py  alt_units.py  dft_example.py  end_gauge.py  impedance_complex.py  impedance_scalar.py  impedance_scalar_nu.py
doc/: INSTALL  doc.cfg  readthedocs.cfg
doc/sphinx/: conf.py  index.rst
scuq/: __init__.py  __version__.py  arithmetic.py  cucomponents.py  operators.py  quantities.py  si.py  testcases.py  ucomponents.py  units.py
src/scuq/: .hgignore  LICENSE  arithmetic.py  cucomponents.py  operators.py  qexceptions.py  quantities.py  si.py  testcases.py  ucomponents.py  units.py
test/: test_abs.py  test_convert.py
