[metadata]
name = scuq-hgk
version = 0.1
author = Thomas Reidemeister, Hans Georg Krauthaeuser
author_email = hgk@ieee.org
description = scalar and complex uncertain pysical quantities
url = http://tu-dresden.de/et/tet

[options]
package_dir =
    = src
packages = find:
python_requires = >=2.7

[options.packages.find]
where = src
